--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "server": "node server/mockServer.js"
   },
   "dependencies": {
-    "vue": "^3.5.24"
+    "vue": "^3.5.24",
+    "cors": "^2.8.5",
+    "express": "^5.2.1"
   },
   "devDependencies": {
     "@types/node": "^24.10.1",
