--- a/package.json
+++ b/package.json
@@ -1,28 +1,42 @@
 {
   "name": "eurowings-price-offers",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc -b && vite build",
+    "build": "vue-tsc && vite build",
     "preview": "vite preview",
-    "server": "node server/mockServer.js"
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest --coverage",
+    "type-check": "vue-tsc --noEmit",
+    "server": "tsx server/mockServer.ts",
+    "start": "concurrently \"npm run server\" \"npm run dev\""
   },
   "dependencies": {
-    "vue": "^3.5.24",
-    "cors": "^2.8.5",
-    "express": "^5.2.1"
+    "axios": "^1.6.0",
+    "vue": "^3.4.0"
   },
   "devDependencies": {
-    "@types/node": "^24.10.1",
-    "@vitejs/plugin-vue": "^6.0.1",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.10.0",
+    "@vitejs/plugin-vue": "^5.0.0",
+    "@vitest/coverage-v8": "^1.0.0",
+    "@vue/test-utils": "^2.4.0",
     "@vue/tsconfig": "^0.8.1",
-    "typescript": "~5.9.3",
-    "vite": "npm:rolldown-vite@7.2.5",
-    "vue-tsc": "^3.1.4"
-  },
-  "overrides": {
-    "vite": "npm:rolldown-vite@7.2.5"
+    "autoprefixer": "^10.4.0",
+    "concurrently": "^8.2.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.0",
+    "jsdom": "^23.0.0",
+    "postcss": "^8.4.0",
+    "tailwindcss": "^3.4.0",
+    "tsx": "^4.7.0",
+    "typescript": "^5.3.0",
+    "vite": "^5.0.0",
+    "vitest": "^1.0.0",
+    "vue-tsc": "^1.8.0"
   }
 }
